job error_trap finished parallel mode implemented write pid unified for job_run daemon roadkill checker revisited rules note goto tab fix

--- a/lib/Baseliner/I18N/es.po
+++ b/lib/Baseliner/I18N/es.po
@@ -1794,6 +1794,12 @@ msgstr "Cancelado"
 msgid "TRAPPED"
 msgstr "Capturado"
 
+msgid "SKIPPING"
+msgstr "Ignorando"
+
+msgid "RETRYING"
+msgstr "Reintentando"
+
 msgid "PAUSED"
 msgstr "Retenido"
 
