--- a/lib/Baseliner/I18N/es.po
+++ b/lib/Baseliner/I18N/es.po
@@ -4925,3 +4925,18 @@ msgstr "El cambio tiene que estar asignado a algún proyecto"
 
 msgid "The revision does not belong to any of the changeset projects"
 msgstr "La revisión no pertenece a ningún proyecto del cambio"
+
+msgid "Before"
+msgstr "Antes"
+
+msgid "After"
+msgstr "Despues"
+
+msgid "On"
+msgstr "El"
+
+msgid "Enter Number..."
+msgstr "Introduce Número..."
+
+msgid "Enter Text..."
+msgstr "Introduce Texto..."
